# sufex

./: .cproject  .gitignore  .project  README.md  VERSIONS.md
src/: CMakeLists.txt  SufexConfig.h.in
src/cmake/: FindGlog.cmake
src/large-array/: large-array.cpp  large-array.hpp  large-array.t  old-large-array.hpp
src/large-array/test/: LargeArrayTest.cpp
src/logger/: logger.hpp
src/rulex/: rulex.cpp  rulex.hpp
src/s2s/: S2SFileParser.cpp  S2SParser.cpp  S2SParser.hpp
src/s2s/test/: S2SParserTest.cpp  test1.s2s
src/sux/: alphabet.hpp  lexicographical_renaming.hpp  skew.hpp  skew_lexicographical_renaming.hpp  sux.hpp  trigram.hpp
src/sux/test/: SuxBuilderTrigramTest.cpp  TrigramTest.cpp  lexicographical_renaming_test.cpp  skew_test.cpp  testapp.cpp  trigram_test.cpp
src/types/: algotypes.hpp
src/util/: more_algorithm.hpp  more_type_traits.hpp  parallel_vector.hpp  parallelization.hpp  proctime.hpp  random.hpp  sequence-tools.hpp  tupletools.hpp
src/util/app/: combined_clock.cpp
src/util/test/: TupletoolsTest.cpp  tupletools_test.cpp
